tests/fixtures/invalid/missing-assignment.csil
; Invalid: missing assignment operator
person text